name:                haskell-projecteuler
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-projecteuler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Problem1
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , process
                     , process-extras
                     , aeson
                     , bytestring
                     , here
                     , text
                     , webdriver
                     , HandsomeSoup
                     , tagsoup
                     , transformers
                     , utility-ht
                     , parallel
  default-language:    Haskell2010

executable haskell-projecteuler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , haskell-projecteuler
                     , text
                     , utf8-string
                     , ansi-terminal
                     , docopt
  default-language:    Haskell2010

test-suite haskell-projecteuler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-projecteuler
                     , hspec
                     , HUnit
                     , template-haskell
                     , here
                     , webdriver
                     , text
                     , file-embed
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-projecteuler
